fixed photo caption spacing issue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -72,7 +72,7 @@ header{
 
   .photo-container{
 
-    padding: 5px;
+    padding: 5px 5px 0px;
     background-color: #f0f0f0;
     border-radius: 3px;
 
@@ -82,13 +82,13 @@ header{
       text-align: center;
       line-height: 20px;
       margin-bottom: 0 !important;
-      margin-top: 12px;
-      padding: 0 10%;
+      // margin-top: 12px;
+      padding: 10px 10%;
     }
 
     img{
       width: 100%;
-      height: 90%;
+      min-height: 80%;
       object-fit: cover;
       overflow: hidden;
     }
